--- a/frontend/src/pages/BattlePage.css
+++ b/frontend/src/pages/BattlePage.css
@@ -209,6 +209,8 @@
 .join-room-container {
 	display: flex;
 	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	gap: 10px;
 	width: 100%;
 	max-width: 250px;
